# ghcup-hs

./: .bash-completion  .cirrus.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .hlint.yaml  .travis.yml  .yamllint  CHANGELOG.md  Dockerfile  HACKING.md  README.md  RELEASING.md  TODO.md  bootstrap-haskell  bootstrap-haskell.ps1  cabal.ghc8103.project  cabal.ghc8103.project.freeze  cabal.ghc8104.project  cabal.ghc8104.project.freeze  cabal.ghc8105.project  cabal.ghc8105.project.freeze  cabal.ghc8107.Unix.project.freeze  cabal.ghc8107.Win32.project.freeze  cabal.ghc8107.Win32.project.freeze.orig  cabal.ghc8107.Win32.project.orig  cabal.ghc8107.project  cabal.ghc8107.project.freeze  cabal.ghc884.project  cabal.ghc884.project.freeze  cabal.ghc901.project  cabal.ghc901.project.freeze  cabal.ghc902.Unix.project  cabal.ghc902.Unix.project.freeze  cabal.ghc902.Win32.project.freeze  cabal.ghc902.Win32.project.freeze.orig  cabal.ghc902.project  cabal.ghc902.project.freeze  cabal.ghc923.project  (+66 more)
.github/: ghc-8.10.3-linux.alpine.files  ghc-8.10.3-linux.files  ghc-8.10.3-linux.opensuse.files  ghc-8.10.3-windows.files  ghcup-run.files  ghcup-run.files.alpine  ghcup-run.files.windows  pull_request_template.md  release.yaml
.github/scripts/: bootstrap.sh  build.sh  cabal-cache.sh  common.sh  cross.sh  env.sh  hls.sh  prereq.sh  release.sh  test.sh
.github/workflows/: bindists.yaml  bootstrap.yaml  build-and-release.yaml  build-test.yaml  cabal-cache.yaml  cabal-release.yaml  cabal.project.yaml  cache.yaml  common.sh  cross.yaml  docker.yaml  hlint.yaml  install-bindist.sh  mkdocs.yaml  optparse-test.yaml  release.yaml  shellcheck.yaml  shimgen.yaml  sigs  stack.yaml  test-sigs.sh  test.yaml
.gitlab/: after_script.sh  ghc-8.10.3-linux.files  ghc-8.10.3-windows.files  ghcup-run.files  ghcup-run.files.windows  ghcup_env  shell.nix
.gitlab/before_script/darwin/: install_deps.sh
.gitlab/before_script/freebsd/: install_deps.sh
.gitlab/before_script/linux/: install_deps.sh  install_deps_manual.sh  install_deps_minimal.sh
.gitlab/before_script/windows/: install_deps.sh
.gitlab/script/: ci.sh  ghcup_bootstrap.sh  ghcup_cross.sh  ghcup_git.sh  ghcup_hls.sh  ghcup_release.sh  ghcup_stack.sh  ghcup_version.sh  hlint.sh
.travis/: build.sh
app/ghcup/: AnsiMain.hs  BrickMain.hs  Main.hs  PlanJson.hs
app/ghcup-gen/: GHCupDownloads.hs  GHCupInfo.hs  Main.hs  ToolRequirements.hs  Validate.hs
app/ghcup/GHCup/: OptParse.hs
bench/: Bench.hs  BenchList.hs  BenchParse.hs  BenchSetup.hs
cbits/: dirutils.c  dirutils.h
data/: config.yaml
data/bench/: ghcup-0.1.0.yaml  ghcup-3rdparty-0.1.0.yaml  ghcup-cross-0.1.0.yaml  ghcup-nightlies-2025-0.0.7.yaml  ghcup-prereleases-0.1.0.yaml
data/build_mk/: cross  default
data/metadata/: ghcup-0.0.1.json  ghcup-0.0.2.yaml  ghcup-0.0.3.yaml  ghcup-0.0.6.yaml  ghcup-0.0.7.yaml
data/test/: ghcup-0.0.1.json  ghcup-0.0.3.yaml  ghcup-0.0.5.yaml  ghcup-0.0.6.yaml  ghcup-0.0.7.yaml  ghcup-0.0.8.yaml  ghcup-0.0.9.yaml  ghcup-0.1.0.yaml
docker/: build.sh
docker/alpine32/: Dockerfile
docker/alpine64/: Dockerfile
docker/arm32v7/: Dockerfile  update_opt.sh
docker/arm32v7/bionic/: Dockerfile
docker/arm32v7/buster/: Dockerfile
docker/arm32v7/focal/: Dockerfile
docker/arm64v8/: Dockerfile
docker/arm64v8/alpine/: Dockerfile
docker/arm64v8/bionic/: Dockerfile
docker/arm64v8/buster/: Dockerfile
docker/arm64v8/focal/: Dockerfile
docs/: BUGS.md  CHANGELOG.md  HACKING.md  RELEASING.md  about.md  dev.md  guide.md  index.md  install.md  steps.md
docs/css/: extra.css
docs/javascripts/: extra.js
docs/overrides/: base.html  main.html
ghcup-gen/: CHANGELOG.md  Generate.hs  Main.hs  Validate.hs  ghcup-gen.cabal
golden/: GHCupInfo.json
hooks/stack/: ghc-install.sh
lib/: GHCup.hs
lib-opt/GHCup/: OptParse.hs
lib-opt/GHCup/OptParse/: ChangeLog.hs  Common.hs  Compile.hs  Config.hs  DInfo.hs  DebugInfo.hs  Fixup.hs  GC.hs  Generate.hs  HealthCheck.hs  Install.hs  List.hs  Nuke.hs  Prefetch.hs  Reset.hs  Rm.hs  Run.hs  Set.hs  TUI.hs  Test.hs  ToolRequirements.hs  UnSet.hs  Upgrade.hs  Whereis.hs
lib-tui/GHCup/: BrickMain.hs
lib-tui/GHCup/Brick/: Actions.hs  App.hs  Attributes.hs  BrickState.hs  Common.hs
lib/GHCup/: Builder.hs  Cabal.hs  CabalConfig.hs  Directories.hs  Download.hs  Errors.hs  GHC.hs  HLS.hs  HealthCheck.hs  List.hs  Logger.hs  Logger.hs-boot  MegaParsec.hs  PlanJson.hs  Platform.hs  Prelude.hs  Prompts.hs  Query.hs  Requirements.hs  Setup.hs  Stack.hs  Types.hs  Unpack.hs  Utils.hs  Utils.hs-boot  Version.hs  Warnings.hs
lib/GHCup/Command/: DebugInfo.hs  Fixup.hs  GC.hs  HealthCheck.hs  Install.hs  List.hs  Nuke.hs  Prefetch.hs  Rm.hs  Set.hs  Upgrade.hs  Whereis.hs
lib/GHCup/Compat/: Pager.hs  Terminal.hs
lib/GHCup/Data/: GHCupDownloads.hs  GHCupInfo.hs  ToolRequirements.hs
lib/GHCup/Download/: Common.hs  IOStreams.hs  Utils.hs
optparse-test/: Main.hs
scoop-better-shimexe/: LICENSE-MIT  LICENSE-UNLICENSE  README.md  repshims.bat  shim.c
scripts/: pull_release_artifacts.sh  update-sftp.sh
scripts/bootstrap/: bootstrap-haskell  bootstrap-haskell.ps1
scripts/dev/: modgraph.sh  refreeze.sh  update-shell-completions.sh
scripts/releasing/: 01-bump-ghcup-ver.sh  02-pull_release_artifacts.sh  03-sftp-upload-artifacts.sh  04-create-yaml-snippet.sh  05-bump-bootstrap-ver.sh  06-sftp-symlink-artifacts.sh  07-sftp-upload-bootstrap.sh  08-upload-hackage.sh  bump-bootstrap-ver.sh  bump-ghcup-ver.sh  create-yaml-snippet.sh  pull_release_artifacts.sh  sftp-symlink-artifacts.sh  sftp-upload-artifacts.sh  sftp-upload-bootstrap.sh  sftp-upload-hackage.sh
scripts/shell-completions/: bash
shell-completions/: fish  zsh
test/: Main.hs
test/GHCup/: ArbitraryTypes.hs
test/ghcup-test/: Main.hs  Spec.hs
test/optparse-test/: ChangeLogTest.hs  CompileTest.hs  ConfigTest.hs  DebugInfoTest.hs  GCTest.hs  InstallTest.hs  ListTest.hs  Main.hs  OtherCommandTest.hs  RmTest.hs  RunTest.hs  SetTest.hs  UnsetTest.hs  UpgradeTest.hs  Utils.hs  WhereisTest.hs
www/: LICENSE  ghcup.css  ghcup.js  index.html
(+176 files in other folders)
