cabal-version:      3.0
name:               ghcup-gen
version:            0.1.17.3
license:            LGPL-3.0-only
license-file:       LICENSE
copyright:          Julian Ospald 2020
maintainer:         hasufell@posteo.de
author:             Julian Ospald
homepage:           https://github.com/haskell/ghcup-metadata
bug-reports:        https://github.com/haskell/ghcup-metadata/issues
synopsis:           ghcup-gen dev tool
description:        Dev tool for handling ghcup metadata

category:           System
build-type:         Simple
extra-doc-files:
  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/haskell/ghcup-metadata.git

executable ghcup-gen
  main-is:            Main.hs
  other-modules:      Validate
                      Generate
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    PackageImports
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -threaded

  build-depends:
    , aeson-pretty          ^>=0.8.9
    , base                  >=4.13     && <5
    , bytestring            ^>=0.11
    , containers            ^>=0.6
    , deepseq               ^>=1.4
    , filepath              ^>=1.4.2.1
    , ghcup                 ^>=0.1.19.0
    , haskus-utils-variant  ^>=3.2
    , libarchive            ^>=3.0.3.0
    , megaparsec            >=8.0.0      && <9.3
    , mtl                   ^>=2.2
    , optics                ^>=0.4
    , optparse-applicative  >=0.15.1.0 && <0.17
    , pretty                ^>=1.1.3.1
    , pretty-terminal       ^>=0.1.0.0
    , regex-posix           ^>=0.96
    , resourcet             ^>=1.2.2
    , safe-exceptions       ^>=0.1
    , text                  ^>=2.0
    , transformers          ^>=0.5
    , versions              >=6.0.0
    , yaml-streamly         ^>=0.12.0
